# django-essential-training

./: .gitignore  README.md  pyproject.toml  snippets.txt
.devcontainer/: devcontainer.json
home/: urls.py  views.py
home/templates/home/: authorized.html  login.html  logout.html  register.html  welcome.html
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_notes_user.py
notes/templates/notes/: notes_delete.html  notes_detail.html  notes_form.html  notes_list.html
smartnotes/: settings.py  urls.py
static/templates/: base.html
